--- a/SchoolLibrary/SchoolLibrary/bin/SchoolLibrary.dll.config
+++ b/SchoolLibrary/SchoolLibrary/bin/SchoolLibrary.dll.config
@@ -19,7 +19,7 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <add name="SchoolLibraryDBContext" connectionString="data source=M5331540\SQLEXPRESS;initial catalog=SchoolLibraryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="SchoolLibraryDBContext" connectionString="data source=.\SQLEXPRESS;initial catalog=SchoolLibraryDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
